force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Decides whether a promotion is available.</description>
    <inlineHelpText>Defines if the promotion is considered in the Trade Calendar and the Account Plan.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>