force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Aggregation_Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Aggregation_Category__c</fullName>
    <label>Aggregation Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>