force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Anchor_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Customer</description>
    <label>Anchor Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>