force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Anchor_Account_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Account_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Customer Set</description>
    <label>Anchor Customer Set</label>
    <referenceTo>cgcloud__Account_Set__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>