force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Check_Selectable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Selectable__c</fullName>
    <description>Used for Selectable Promotion List View</description>
    <formula>cgcloud__Promotion_Template__r.cgcloud__Selectable_Promotion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Selectable</label>
    <type>Checkbox</type>
</CustomField>