force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Commit_Date__c</fullName>
    <description>The date the promotion was commited. This field is taken for getting the prices and discounts of a promotion.</description>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>