force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Count_Tactics__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Count_Tactics__c</fullName>
    <label>Count Tactics</label>
    <summaryForeignKey>cgcloud__Tactic__c.cgcloud__Promotion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>