force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Custom1_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom1_Date_Thru__c</fullName>
    <description>End of a project specific time range (e.g. pre-dip)</description>
    <label>Custom1 Date Thru</label>
    <type>Date</type>
</CustomField>