force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Custom2_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom2_Date_From__c</fullName>
    <description>Start of a project specific time range (e.g. post-dip)</description>
    <label>Custom2 Date From</label>
    <type>Date</type>
</CustomField>