force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Custom2_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom2_Date_Thru__c</fullName>
    <description>End of a project specific time range (e.g. post-dip)</description>
    <label>Custom2 Date Thru</label>
    <type>Date</type>
</CustomField>