force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_From__c</fullName>
    <description>Promotion date from</description>
    <label>Date From</label>
    <type>Date</type>
</CustomField>