force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Thru__c</fullName>
    <description>Promotion date thru</description>
    <label>Date Thru</label>
    <type>Date</type>
</CustomField>