force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Delivery_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Date_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Delivery Date From</description>
    <label>Shipment Date From</label>
    <type>Date</type>
</CustomField>