force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Delivery_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Date_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>Delivery Date Thru</description>
    <label>Shipment Date Thru</label>
    <type>Date</type>
</CustomField>