force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Effective_Brands__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Effective_Brands__c</fullName>
    <description>Holds a list (Json Array) of the effective Brand SfIds for this promotion.</description>
    <label>Effective Brands</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>