force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Effective_Categories__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Effective_Categories__c</fullName>
    <description>Holds a list (Json Array) of the effective Category SfIds for this promotion.</description>
    <label>Effective Categories</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>