force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Group_Text__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Group_Text__c</fullName>
    <formula>CASE($User.cgcloud__Language_Postfix__c,
&quot;Language1&quot;, cgcloud__Group_Text_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(cgcloud__Group_Text_Language_2__c,cgcloud__Group_Text_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(cgcloud__Group_Text_Language_3__c,cgcloud__Group_Text_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(cgcloud__Group_Text_Language_4__c,cgcloud__Group_Text_Language_1__c),
cgcloud__Group_Text_Language_1__c)</formula>
    <inlineHelpText>Used to group promotions in the trade calendar (Group By: Group Text).</inlineHelpText>
    <label>Group Text</label>
    <type>Text</type>
</CustomField>