force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Group_Text_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Group_Text_Language_1__c</fullName>
    <description>Holds the Group Text in language 1</description>
    <label>Group Text Language 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>