force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__In_Calculation_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__In_Calculation_Time_Frame__c</fullName>
    <formula>IF(((TODAY() - $Setup.cgcloud__Promotion_Calculation_Server_Offset__c.cgcloud__Days_Before__c) &lt;= cgcloud__Date_Thru__c) &amp;&amp; (cgcloud__Date_From__c &lt;= (TODAY() + $Setup.cgcloud__Promotion_Calculation_Server_Offset__c.cgcloud__Days_After__c)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Calculation Time Frame</label>
    <type>Checkbox</type>
</CustomField>