force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Is_Frozen__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if a dynamic product set should be frozen and not be changed anymore. Can be set manually or via a workflow rule.</description>
    <label>Is Frozen</label>
    <type>Checkbox</type>
</CustomField>