force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the status of Promotion.</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>