force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Is_Push_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Push_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if the push process for this promotion is currently in progress. Has only meaning for pushable promotions</description>
    <label>Is Push In Progress</label>
    <type>Checkbox</type>
</CustomField>