force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Is_Transferable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Transferable__c</fullName>
    <formula>AND(ISPICKVAL(cgcloud__Promotion_Template__r.cgcloud__Is_Transfer_Relevant__c, &quot;YES&quot;), RecordType.DeveloperName = &apos;Promotion&apos;, cgcloud__Date_From__c - IF( ISBLANK(cgcloud__Promotion_Template__r.cgcloud__Transfer_Lead_Time__c) , 0, cgcloud__Promotion_Template__r.cgcloud__Transfer_Lead_Time__c) &lt;= TODAY(),cgcloud__Date_Thru__c + IF( ISBLANK(cgcloud__Promotion_Template__r.cgcloud__Transfer_Follow_Up_Time__c) , 0, cgcloud__Promotion_Template__r.cgcloud__Transfer_Follow_Up_Time__c) &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Transferable</label>
    <type>Checkbox</type>
</CustomField>