force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__KPI_Dirty__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Dirty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be set as true whenever there is any modification in the promotion record.</description>
    <label>KPI Dirty</label>
    <type>Checkbox</type>
</CustomField>