force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Last_Push_Update_Executed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Push_Update_Executed__c</fullName>
    <description>Timestamp when the parent promotion was last pushed</description>
    <label>Last Push Update Executed</label>
    <type>DateTime</type>
</CustomField>