force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Last_Push_Update_Received__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Push_Update_Received__c</fullName>
    <description>Timestamp when the child promotion received the last push update</description>
    <label>Last Push Update Received</label>
    <type>DateTime</type>
</CustomField>