force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Lock_Deletion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Lock_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Deletion</label>
    <type>Checkbox</type>
</CustomField>