force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Manual_Calculation_Input_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Calculation_Input_3__c</fullName>
    <description>Continuation of Manual_Calculation_Input_2__c.
Filled if the manual calculation input json is bigger then 256k.</description>
    <label>Manual Calculation Input 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>