force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>