force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Order_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Date_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Order Date From.</description>
    <label>Order Date From</label>
    <type>Date</type>
</CustomField>