force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Order_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Date_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>Order Date Thru.</description>
    <label>Order Date Thru</label>
    <type>Date</type>
</CustomField>