force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Outdated_Staging_Records__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Outdated_Staging_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outdated Staging Records</label>
    <type>Checkbox</type>
</CustomField>