force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Parent_Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the original promotion this promotion was derived from</description>
    <label>Parent Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Derived Promotions</relationshipLabel>
    <relationshipName>DerivedPromotions</relationshipName>
    <type>Lookup</type>
</CustomField>