force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Participate_In_Active_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Participate_In_Active_Account_Plan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether a promotion is used in the active plan.</description>
    <label>Participate In Active Account Plan</label>
    <type>Checkbox</type>
</CustomField>