force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Phase__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phase__c</fullName>
    <description>Phase of the promotion</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
                <default>true</default>
                <label>Preparation</label>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Modeling</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>ForApproval</fullName>
                <label>For Approval</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>