force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Placement_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Placement_Date_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Placement Date From</description>
    <label>In-Store Date From</label>
    <type>Date</type>
</CustomField>