force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Placement_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Placement_Date_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>Placement Date Thru</description>
    <label>In-Store Date Thru</label>
    <type>Date</type>
</CustomField>