force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to promotion template.</description>
    <label>Promotion Template</label>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>