force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Promotion_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template_Description__c</fullName>
    <formula>cgcloud__Promotion_Template__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Template Description</label>
    <type>Text</type>
</CustomField>