force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Push_Target_Account_Selection__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Push_Target_Account_Selection__c</fullName>
    <description>Only filled for Pushable Promotions.Contains a JSON with the selected push target accounts.</description>
    <label>Push Target Account Selection</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>