force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reference_Date__c</fullName>
    <description>Reference date used for hierarchy search. The date is retrieved from the promotion template used reference date field.</description>
    <inlineHelpText>Reference date used for hierarchy search.</inlineHelpText>
    <label>Reference Date</label>
    <type>Date</type>
</CustomField>