force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Relevant_For_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Relevant_For_Account_Plan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is for project customization. Through this field one can set if the Promotion is specific for the Account Plan.</description>
    <inlineHelpText>Through this field one can set if the Promotion is specific for the Account Plan.</inlineHelpText>
    <label>Relevant For Account Plan</label>
    <type>Checkbox</type>
</CustomField>