force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <formula>TEXT (cgcloud__Promotion_Template__r.cgcloud__Sales_Org__c)</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>