force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Scenario_1_Manual_Inputs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scenario_1_Manual_Inputs__c</fullName>
    <label>Scenario 1 Manual Inputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>