force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Scenario_1_Parameters__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scenario_1_Parameters__c</fullName>
    <description>Scenario Parameters for Scenario 1 in JSON format :
[{&quot;KPI&quot;:&lt;KPI Name&gt;,&quot;value&quot;:&lt;KPI value&gt;,&quot;applied&quot;:&lt;boolean&gt;},...]</description>
    <label>Scenario_1_Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>