force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Scenario_2_Parameters__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scenario_2_Parameters__c</fullName>
    <description>Scenario Parameters for Scenario 2</description>
    <label>Scenario_2_Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>