force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Selected_Scenario__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Selected_Scenario__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Index of the selected Scenario.</description>
    <label>Selected Scenario</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>