force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Slogan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Slogan__c</fullName>
    <description>Slogan in language 1</description>
    <formula>CASE($User.cgcloud__Language_Postfix__c,
&quot;Language1&quot;, cgcloud__Slogan_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(cgcloud__Slogan_Language_2__c,cgcloud__Slogan_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(cgcloud__Slogan_Language_3__c,cgcloud__Slogan_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(cgcloud__Slogan_Language_4__c,cgcloud__Slogan_Language_1__c),
cgcloud__Slogan_Language_1__c)</formula>
    <label>Slogan</label>
    <type>Text</type>
</CustomField>