force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Slogan_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Slogan_Language_1__c</fullName>
    <description>Holds the slogan in language 1.</description>
    <label>Slogan Language 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>