force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Source_Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Advanced Promotions (Source_Promotion__c)</relationshipLabel>
    <relationshipName>Source_Promotion</relationshipName>
    <type>Lookup</type>
</CustomField>