force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Sub_Accounts_Selection__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sub_Accounts_Selection__c</fullName>
    <description>Determines the selection of all the sub accounts of parent customer that are valid.</description>
    <label>Sub Accounts Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>