force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Sync_Relevant_Changes__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sync_Relevant_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Relevant Changes</label>
    <type>Checkbox</type>
</CustomField>