force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__To_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__To_Date_Paid__c</fullName>
    <label>To Date Paid</label>
    <summarizedField>cgcloud__Tactic__c.cgcloud__To_Date_Paid_Amount__c</summarizedField>
    <summaryForeignKey>cgcloud__Tactic__c.cgcloud__Promotion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>