force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Trade_Calendar_Color_Code_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trade_Calendar_Color_Code_2__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>RGB Code for Color Schema 2 of Usage &apos;TradeCalendar&apos;. Reserved for Phase Specific Coloring</inlineHelpText>
    <label>Trade Calendar Color Code 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Color_Codes</valueSetName>
    </valueSet>
</CustomField>