force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Trade_Calendar_Transparency_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trade_Calendar_Transparency_2__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>Transparency Value for Color Schema 2 of Usage &apos;TradeCalendar&apos;. Reserved for Phase Specific Coloring</inlineHelpText>
    <label>Trade Calendar Transparency 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>