force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Trade_Calendar_Transparency_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trade_Calendar_Transparency_3__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>Transparency Value for Color Schema 3 of Usage &apos;TradeCalendar&apos;. Reserved for project specific Coloring</inlineHelpText>
    <label>Trade Calendar Transparency 3</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>