force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Transferred_Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transferred_Version__c</fullName>
    <label>Last Transfer Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>