force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Version__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current version of the record. Updated on each operation.</description>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>