force-app/main/default/objects/cgcloud__Promotion__c/fields/cgcloud__Volume_Percent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Volume_Percent__c</fullName>
    <description>This field is calculated by SmartUI every time the Sub Account list values are updated.</description>
    <label>% of Volume</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>