force-app/main/default/objects/cgcloud__Promotion__c/recordTypes/cgcloud__Promotion.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Promotion</fullName>
    <active>true</active>
    <description>Record type for editable page layout.</description>
    <label>Promotion</label>
</RecordType>