force-app/main/default/objects/cgcloud__Promotion__c/recordTypes/cgcloud__SellablePromotion.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__SellablePromotion</fullName>
    <active>true</active>
    <description>Promotion record type for FSM</description>
    <label>SellablePromotion</label>
</RecordType>