force-app/main/default/objects/cgcloud__Promotion__c/validationRules/cgcloud__CommitDate_NotBefore_DFromMinusFourWeeks.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__CommitDate_NotBefore_DFromMinusFourWeeks</fullName>
    <active>true</active>
    <description>The Commit Date must not be sooner than 4 weeks before Date From.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Promotion&apos;,cgcloud__Commit_Date__c + 28 &lt; cgcloud__Date_From__c)</errorConditionFormula>
    <errorMessage>The Commit Date must not be sooner than 4 weeks before Date From.</errorMessage>
</ValidationRule>