force-app/main/default/objects/cgcloud__Promotion__c/validationRules/cgcloud__Custom1_Date_From_and_Thru_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Custom1_Date_From_and_Thru_Validation</fullName>
    <active>true</active>
    <description>Custom1 Date From can&apos;t be later than Custom1 Date Thru</description>
    <errorConditionFormula>cgcloud__Custom1_Date_From__c  &gt;  cgcloud__Custom1_Date_Thru__c</errorConditionFormula>
    <errorMessage>Custom1 Date From can&apos;t be later than Custom1 Date Thru.</errorMessage>
</ValidationRule>