force-app/main/default/objects/cgcloud__Promotion__c/validationRules/cgcloud__Date_From_Date_Thru_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Date_From_Date_Thru_Validation</fullName>
    <active>true</active>
    <description>Date From can&apos;t be later than Date Thru.</description>
    <errorConditionFormula>cgcloud__Date_From__c  &gt;  cgcloud__Date_Thru__c</errorConditionFormula>
    <errorMessage>Date From can&apos;t be later than Date Thru.</errorMessage>
</ValidationRule>